datasets/dataset_txt/pipenv/pipenv_1433.txt
infogeek commented on 9 Mar 2018
I installed pipenv on windows and did a pipenv install which worked but pipenv shell throws this error E:\temp\temp>pipenv shell
File "", line 1
c:\users\infogeek\appdata\local\programs\python\python36\python.exe -c "from pew.pew import prevent_path_errors; prevent_path_errors()"
^
SyntaxError: unexpected character after line continuation character
Windows 10
Python 3.6.3
pipenv 11.1.5